# Juego-Mancala-con-IA-y-paralelizacion

./: .gitignore  Guia_correr_proyecto.md  LICENSE  README.md  TESTING.md  sonar-project.properties
.github/workflows/: ci.yml  sonar.yml
.venv-1/: pyvenv.cfg
backend/: Dockerfile  README.md  requirements.txt
backend/app/: game.py  main.py  motor_client.py  schemas.py
backend/tests/: test_api.py
deploy/: load_test.js
deploy/cloud/: PREPARACION-FASE4.md  README.md  backend-deployment.yaml  backend-service.yaml  backend.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  frontend.yaml  ghcr-secret.yaml.example  ingress-aws-alb.yaml.example  ingress-gcp-gke.yaml.example  ingress.yaml  motor-deployment.yaml  motor.yaml
deploy/local/: README.md  backend-deployment.yaml  backend-service.yaml  configmap.yaml  docker-compose.yml  frontend-deployment.yaml  frontend-service.yaml  motor-deployment.yaml  motor-service.yaml
deploy/local/k8s/: backend.yaml  configmap.yaml  frontend.yaml  ghcr-secret.yaml.example  motor.yaml
deploy/scripts/: create-ghcr-secret.sh  render-cicd-captures.py  render-k8s-captures.py  set-image-tags.sh
docs/: 01-arquitectura.md  02-motor.md  03-paralelizacion.md  04-despliegue-local.md  05-despliegue-nube.md  06-cicd.md  07-analisis-comparativo.md  08-conclusiones.md  README.md
docs/img/: k8s-deployments.txt  k8s-pods.txt  k8s-svc.txt
frontend/: Dockerfile  app.js  index.html  nginx.conf  style.css  ui-extras.js
frontend/src/: app.js  index.html  style.css
motor/: CMakeLists.txt  Dockerfile  README.md
motor/bench/: bench.cpp  mancala_bench.cpp
motor/src/: alphabeta.cpp  alphabeta.h  board.cpp  board.h  mcts.cpp  mcts.h  server.cpp
motor/tests/: suite.txt  test_alphabeta.cpp  test_board.cpp  test_mcts.cpp
scripts/: deploy-kind.ps1
